--- a/flipkart/style.css
+++ b/flipkart/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -9,16 +9,19 @@ body{
     font-family: 'roboto-medium';
     src: url(/Assets/font/roboto-medium-webfont.woff2);
 }
+
 @font-face {
     font-family: 'roboto-regular';
     src: url(/Assets/font/roboto-regular-webfont.woff2);
 }
+
 .navBar {
     display: flex;
     justify-content: center;
     background: #2874f0;
     height: 56px;
 }
+
 .nav-section {
     display: flex;
     justify-content: space-evenly;
@@ -26,19 +29,23 @@ body{
     column-gap: 27px;
     width: 70%;
 }
+
 .navHeading {
     display: flex;
     flex-direction: column;
-    margin-right: -22px; 
+    margin-right: -22px;
 }
+
 .navHeading a {
     color: #fff;
     font-size: 11px;
     text-decoration: none;
 }
+
 .navHeading span {
     color: #ffe500;
 }
+
 .navSearch-bar form {
     display: flex;
     align-items: center;
@@ -47,15 +54,18 @@ body{
     padding: 4.5px 0px;
     width: 590px;
 }
+
 .navInput input {
     border: none;
     padding-left: 13px;
     padding-right: 362px;
 }
+
 .navSearch-bar button {
     border: none;
     background: #fff;
 }
+
 .navLogin a {
     color: #2874f0;
     background: #fff;
@@ -63,32 +73,38 @@ body{
     padding: 5px 40px;
     text-decoration: none;
 }
+
 .navSeller span {
     font-size: 16px;
     color: #fff;
     font-family: 'roboto-medium';
     white-space: nowrap;
 }
+
 .navMore {
     display: flex;
     align-items: center;
     gap: 5px;
 }
+
 .navMore i {
     font-size: 10px;
     color: #fff;
 }
+
 .moreOption {
     font-size: 16px;
     color: #fff;
     font-family: 'roboto-medium';
 }
-.navCart a span{
+
+.navCart a span {
     color: #fff;
     font-family: 'roboto-medium';
     white-space: nowrap;
     text-decoration: none;
 }
+
 .navCart a {
     display: flex;
     align-items: center;
@@ -105,54 +121,159 @@ body{
     border-bottom: 1px solid rgba(191, 186, 186, 0.867);
     height: 40px;
 }
+
 .category {
     display: flex;
     font-size: 14px;
     font-family: 'roboto-medium';
 }
-.downImg svg{
+
+.downImg svg {
     margin-left: -25px;
     width: 8px;
     opacity: 0.5;
 }
+
 .filterHeading {
     border-bottom: 1px solid rgb(192, 180, 180);
     padding: 10px;
 }
+
 .filText {
     font-size: 18px;
     font-family: 'roboto-medium'
 }
+
 .blueText {
     font-size: 12px;
     font-family: 'roboto-medium';
     color: #2874f0;
 }
+
 .filterCategories {
     display: flex;
     flex-direction: column;
     border-bottom: 1px solid rgb(191, 190, 190);
+    padding: 16px;
+
 }
-.filterCategories span{
- font-family: 'roboto-medium';
+
+.filterCategories span {
+    font-family: 'roboto-medium';
 }
+
 .filterCategories section {
     display: flex;
     flex-direction: column;
     row-gap: 5px;
     column-gap: 5px;
 }
+
+.priceRange {
+    padding: 16px;
+}
+
+.brandContainer {
+    padding: 16px;
+}
+
 .first {
     font-size: 12px;
 }
+
 .second {
     font-size: 14px;
     color: #878787;
 }
+
 .second i {
     padding-right: 5px;
 }
+
 .third {
     font-size: 14px;
 }
 
+.textPointer {
+    padding: 12px 16px;
+}
+
+.sortMobile span {
+    font-size: 12px;
+    color: #878787;
+    font-family: 'roboto-medium';
+}
+
+.productResult h4 {
+    font-size: 16px;
+    font-family: 'roboto-regular';
+    margin: 8px 0px 0px;
+}
+
+.sortProduct h4 {
+    font-size: 14px;
+    font-family: 'roboto-medium';
+    padding: 8px 10px 4px 0px;
+}
+
+.sortProduct span {
+    font-size: 14px;
+    font-family: 'roboto-regular';
+    margin: 0px 10px;
+    padding: 8px 0px 4px;
+}
+
+.mainContainer {
+    display: flex;
+    padding: 8px 80px 8px;
+    background: #f0f0f0;
+}
+
+.filter-container {
+    border-right: 8px solid #f0f0f0;
+    background: #fff;
+    width: 317px;
+    height: 1500px;
+}
+
+.productDetailSection {
+    background: #fff;
+    width: 100%;
+}
+
+.rangingOption input {
+    width: 100%;
+    height: 6px;
+}
+
+.rangingOption ::-moz-range-thumb {
+    background: #fff;
+}
+
+.min-max select {
+    width: 100px;
+}
+
+.min-max span {
+    font-size: 14px;
+    margin: 0px 7px;
+    color: #878787;
+}
+
+.brandNames {
+    margin: -16px;
+    padding: 16px;
+    height: 59px;
+}
+
+.brandNames h4 {
+    font-size: 13px;
+    font-family: 'roboto-medium';
+}
+
+h4,
+span {
+    color: #212121;
+}
+
+/*......*/
