--- a/flipkart/style.css
+++ b/flipkart/style.css
@@ -214,6 +214,7 @@ body {
     font-size: 14px;
     font-family: 'roboto-medium';
     padding: 8px 10px 4px 0px;
+    font-weight: 300;
 }
 
 .sortProduct span {
@@ -362,6 +363,8 @@ body {
 .product-container {
     position: relative;
     padding: 24px 0px 30px 24px;
+    border-bottom: 1px solid #e4dbdb;
+    width: 100%;
 }
 .mobImgSection {
     position: absolute;
@@ -382,6 +385,25 @@ body {
     position: absolute;
     top: 59px;
     right: 204px;
+}
+.priceSection div {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+   font-size: 25px;
+   font-family: 'roboto-medium';
+   color: #212121; 
+}
+.assuredImg {
+    width: 77px;
+}
+.sortProduct {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #e4dbdb;
+}
+#products-el {
+    padding: 0px 30px 0px 20px;
 }
 
 
