--- a/Amazon/style.css
+++ b/Amazon/style.css
@@ -1,34 +1,40 @@
-
 @font-face {
     font-family: 'font-one';
     src: url(/Amazon/Assets/Font/AmazonUIFont-amazonember_bd-46b91bda68161c14e554a779643ef4957431987b._V2_.woff2);
 }
+
 @font-face {
     font-family: 'font-two';
     src: url(/Amazon/Assets/Font/AmazonUIFont-amazonember_bd-46b91bda68161c14e554a779643ef4957431987b._V2_\ \(1\).woff2);
 }
+
 @font-face {
     font-family: 'font-three';
     src: url(/Amazon/Assets/Font/AmazonUIFont-amazonember_rg-cc7ebaa05a2cd3b02c0929ac0475a44ab30b7efa._V2_.woff2);
 }
+
 @font-face {
     font-family: 'font-four';
     src: url(/Amazon/Assets/Font/AmazonUIFont-amazonember_rg-cc7ebaa05a2cd3b02c0929ac0475a44ab30b7efa._V2_\ \(1\).woff2);
 }
+
 @font-face {
     font-family: 'font-five';
     src: url(/Amazon/Assets/Font/KFPk-9IF4FqAqY-.woff2);
 }
+
 @font-face {
     font-family: 'font-six';
     src: url(/Amazon/Assets/Font/pDxWAF1pBB0dzGB.woff2);
 }
+
 @font-face {
     font-family: 'font-seven';
     src: url(/Amazon/Assets/Font/WOnTLzkiaEccV7F.woff2);
 }
+
 * {
-    margin:  0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
@@ -36,27 +42,36 @@
 .nav-top {
     display: flex;
     align-items: center;
-    background: #242525;
+    background: #231f20;
+    height: 76px;
 }
-.nav-top span {
+
+/* .nav-top span {
     color: #fff;
-}
+} */
+
 .navigation {
     display: flex;
     flex-direction: row;
 }
+
 .nav-top i {
-    color: #fff;  
+    color: #fff;
 }
+
 .location-icon {
     display: flex;
     flex-direction: column;
-} 
-.navigation i {
-    margin: 16px 4px 1px 1px;
+    padding-right: 15px;
 }
+
+.navigation i {
+    margin: 13px 4px 1px 1px;
+}
+
 .search-container {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     gap: 5px;
     border: 1px solid #dddddd;
@@ -65,6 +80,7 @@
     width: 60%;
     height: 42px;
 }
+
 .category {
     display: flex;
     align-items: center;
@@ -74,11 +90,14 @@
     height: 40px;
     padding: 2px 2px;
 }
+
 .category span {
     color: #0f1f1f;
     font-size: 14px;
     font-family: 'font-six';
+    opacity: 0.8;
 }
+
 .category i {
     color: #0f1f1f;
     font-size: 10px;
@@ -88,8 +107,8 @@
     border: none;
     font-size: 16px;
     font-family: 'font-six';
-    width: 970px;
 }
+
 .submit-btn {
     display: flex;
     align-items: center;
@@ -97,17 +116,19 @@
     height: 40px;
     padding: 0px 4px;
 }
+
 .submit-btn i {
     color: rgb(53, 9, 9);
     font-size: 23px;
 }
+
 .search-icon {
     display: flex;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
 }
 
-.testImg  {
+.testImg {
     background-image: url(https://m.media-amazon.com/images/G/31/gno/sprites/nav-sprite-global-1x-hm-dsk-reorg._CB405936311_.png);
     background: rgb(0, 0, 0);
     background-position: 0 1000px;
@@ -115,3 +136,179 @@
     width: 1000px;
     height: 100%;
 }
+
+.greeting {
+    font-size: 12px;
+    font-family: 'font-six';
+}
+
+.address {
+    font-size: 14px;
+    font-family: 'font-five';
+    white-space: nowrap;
+}
+
+.logo-name {
+    width: 161px;
+}
+
+.account-section {
+    display: flex;
+    align-items: center;
+}
+
+.country-language {
+    display: flex;
+    align-items: center;
+    column-gap: 5px;
+    padding: 0px 20px;
+}
+
+.country-language span {
+    font-size: 14px;
+    font-family: 'font-five';
+}
+
+.country-language i {
+    font-size: 10px;
+    color: #efefef;
+    margin-top: 6px;
+}
+
+.account-list {
+    display: flex;
+    flex-direction: column;
+    padding-right: 20px;
+}
+
+.sign {
+    font-size: 12px;
+    font-family: 'font-six';
+}
+
+.accounts {
+    font-size: 14px;
+    font-family: 'font-five';
+    white-space: nowrap;
+}
+
+.account-list div {
+    display: flex;
+    align-items: center;
+    column-gap: 5px;
+}
+
+.account-list i {
+    font-size: 10px;
+}
+
+.order-returns {
+    display: flex;
+    flex-direction: column;
+    padding-right: 20px;
+}
+
+.product-return {
+    font-size: 12px;
+    font-family: 'font-six';
+}
+
+.product-order {
+    font-size: 14px;
+    font-family: 'font-five';
+    white-space: nowrap;
+}
+
+.cart-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 10px;
+}
+
+.cart-section div {
+    display: flex;
+    align-items: center;
+    column-gap: 5px;
+}
+.cart {
+    font-size: 14px;
+    font-family: 'font-five';
+}
+
+.queue {
+    font-family: 'font-five';
+    color: #f08804;
+}
+
+/* center nav */
+.all-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #262f40;
+    padding: 0px 11px;
+}
+.container {
+    display: flex;
+    column-gap: 10px;
+}
+.product-list span {
+    font-size: 14px;
+    font-family: 'font-six';
+    padding: 8px 9px;
+    color: #fff;
+}
+.product-list i {
+    font-size: 10px;
+    margin: 0px 0px 0px 2px;
+}
+.burger-nav i,span {
+    color: #fff;
+}
+.burger-nav span {
+    font-size: 14px;
+    font-family: 'font-five';
+}
+#category-el {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #dddddd;
+}
+#category-el span{
+    color: #333333;
+    font-family: 'font-six';
+    font-size: 12px;
+    padding: 0px 13px;
+}
+.electro-img {
+    transform: translateY(7px);
+}
+.product-sorting {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #dddddd;
+    box-shadow: 0 0 10px #ddd;
+    padding: 10px;
+
+}
+.product-sorting span {
+    color: #0f1f1f;
+    font-size: 14px;
+    font-family: 'font-six';
+
+}
+.sort-by {
+    border: 1px solid #dddddd;
+    border-bottom: 1px solid #dddddd;
+    box-shadow: 0 2px 5px rgb(15 17 17 / 15%);
+    background: #f0f2f2;
+    border-radius: 8px;
+    padding: 0px 7px 0px 7px;
+}
+.sort-by span,i {
+    font-size: 11px;
+}
+
+
