--- a/Amazon/style.css
+++ b/Amazon/style.css
@@ -42,8 +42,8 @@
 .nav-top {
     display: flex;
     align-items: center;
-    background: #231f20;
-    height: 76px;
+    background: #131921;
+    height: 60px;
 }
 
 /* .nav-top span {
@@ -151,12 +151,19 @@
 .logo-name {
     width: 161px;
 }
-
+.logo-name{
+    background-image: url(/Amazon/Assets/Img/amzonText-imgs.png);
+    background-position-x: 8px;
+    background-position-y: -33px;
+    height: 50px;
+}
+.logo-img img {
+    height: 60px;
+}
 .account-section {
     display: flex;
     align-items: center;
 }
-
 .country-language {
     display: flex;
     align-items: center;
@@ -231,6 +238,7 @@
     align-items: center;
     column-gap: 5px;
 }
+
 .cart {
     font-size: 14px;
     font-family: 'font-five';
@@ -249,39 +257,65 @@
     background: #262f40;
     padding: 0px 11px;
 }
+
 .container {
     display: flex;
     column-gap: 10px;
 }
+
 .product-list span {
     font-size: 14px;
     font-family: 'font-six';
     padding: 8px 9px;
     color: #fff;
 }
+
 .product-list i {
     font-size: 10px;
     margin: 0px 0px 0px 2px;
 }
-.burger-nav i,span {
+
+.burger-nav i {
     color: #fff;
 }
+
+.burger-nav span {
+    font-family: 'font-six';
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.nav-top,
+.nav-centre span {
+    color: #fff;
+}
+
 .burger-nav span {
     font-size: 14px;
     font-family: 'font-five';
 }
+
+.left-main {
+    /* width: 315px; */
+    width: 546px;
+    margin: 15px;
+    padding-left: 10px;
+}
+
 #category-el {
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #dddddd;
 }
-#category-el span{
+
+#category-el span {
     color: #333333;
     font-family: 'font-six';
     font-size: 12px;
     padding: 0px 13px;
 }
+
 .electro-img {
     transform: translateY(7px);
 }
@@ -307,8 +341,197 @@
     border-radius: 8px;
     padding: 0px 7px 0px 7px;
 }
-.sort-by span,i {
+
+.sort-by span,
+i {
     font-size: 11px;
 }
 
+.catHeading span {
+    font-size: 14px;
+    font-family: 'font-six';
+    font-weight: 600;
+}
 
+.deliveryOption {
+    font-size: 14px;
+    font-family: 'font-six';
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+
+.sectionTime {
+    display: flex;
+    flex-direction: column;
+    height: 50px;
+}
+ 
+.sectionTime label {
+    margin-left: 4px;
+    font-size: 14px;
+    font-family: 'font-four';
+    /* font-weight: 100; */
+}
+
+.sectionTime input {
+    margin-right: 5px;
+}
+
+.deliveryDay {
+    margin-top: 10px;
+}
+.itemsHead ul li{
+    list-style-type: none;
+}
+
+.itemsHead span {
+    font-size: 14px;
+    font-family: 'font-four';
+    line-height: 1.4;
+}
+
+.sharp-content {
+    margin-left: 10px;
+}
+.reviews {
+    margin-top: 10px;
+}
+.reviews span {
+    display: block;
+    font-size: 14px;
+    font-family: 'font-five';
+    height: 25px;
+}
+.fourStar-rating {
+    background-image: url(/Amazon/Assets/Img/starsAndLogo.png);
+    background-position-y: 167px;
+    width: 95px;
+    height: 22px;
+    cursor: pointer;
+
+}
+.fourStar-rating:nth-child(2) {
+    background-image: url(/Amazon/Assets/Img/starsAndLogo.png);
+    background-position-y: 72px;
+    background-position-x: 221px;
+}
+.fourStar-rating:nth-child(3) {
+    background-image: url(/Amazon/Assets/Img/starsAndLogo.png);
+    background-position-x: -97px;
+    background-position-y: 120px;
+}
+.fourStar-rating:nth-child(4) {
+    background-image: url(/Amazon/Assets/Img/starsAndLogo.png);
+    background-position-y: 24px;
+    background-position-x: 124px;
+}
+
+.fourStar-rating span {
+    margin-left: 105px;
+    white-space: nowrap;
+    font-size: 12px;
+    font-family: 'font-four';
+}
+.brand-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 16px;
+}
+.brand-container span {
+    font-size: 14px;
+    font-family: 'font-five'; 
+    margin: 10px 0px;
+}
+.brand-container label {
+    font-size: 14px;
+    font-family: 'font-three';
+}
+.brand-container label input {
+    width: 16px;
+    height: 16px;
+    margin-right: 5px;
+}
+.price-section {
+    display: flex;
+    flex-direction: column;
+}
+.price-filtering {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 5px;
+    margin-top: 10px;
+}
+.price-filtering input {
+    width: 65px;
+    padding: 3px 7px 3px 4px;
+    border-radius: 2px;
+    border:1px solid #767878;
+    box-shadow: 0 1px 2px rgb(15 17 17 / 15%) inset;
+}
+.brand-container input[type=checkbox]{
+    accent-color: #017285;
+}
+.price-filtering span {
+    font-size: 14px;
+    font-family: 'font-four';
+    border: 1px solid #d5d9d9;
+    border-radius: 3px;
+    padding: 2px 6px;
+}
+.price {
+    display: block;
+    font-size: 14px;
+    font-family: 'font-five';
+    cursor: pointer;
+    margin: 5px 0px;
+}
+.price-section span {
+  font-size: 14px;
+  font-family: 'font-four';
+  margin-top: 1px;
+  cursor: pointer;
+}
+/* .right-main {
+    display: flex;
+} */
+main {
+    display: flex;
+    padding: 14px 0px 0px 0px;
+}
+.imgSection {
+    display: flex;
+    justify-content: center;
+    /* background: #f8f8f8; */
+}
+.imgSection img {
+    background: #f8f8f8;
+    width: 222px;
+    height: 282px;
+}
+.model-name {
+    width: 273px;
+}
+.model-name span {
+    font-size: 16px;
+    font-family: 'font-three';
+    color: #0f1111;
+}
+.ratingSection {
+    display: flex;
+    align-items: center;
+}
+.ratingSection span {
+    font-size: 14px;
+    font-family: 'font-three';
+    color: #007185;
+}
+#products-cr {
+    display: grid;
+    grid-template-columns: repeat(8,1fr);
+}
+.searchHeading {
+    font-size: 20px;
+    font-family: 'font-one';
+    margin-bottom: 10px;
+}
