--- a/flipkart/style.css
+++ b/flipkart/style.css
@@ -53,16 +53,11 @@ body {
     padding: 4.5px 0px;
     width: 590px;
 }
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-/* */
-=======
->>>>>>> e90a9de (feat:navProgres)
-=======
-=======
 
->>>>>>> 70fbdfb (added js)
+/* */
+
+
+
 .navInput input {
     border: none;
     padding-left: 13px;
@@ -140,18 +135,12 @@ body {
     width: 8px;
     opacity: 0.5;
 }
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
 
 
->>>>>>> afeced3 (feat:nav)
-=======
->>>>>>> 77b2e42 (twoNav)
-=======
-=======
 
->>>>>>> 70fbdfb (added js)
+
+
+
 .filterHeading {
     border-bottom: 1px solid rgb(192, 180, 180);
     padding: 10px;
@@ -175,19 +164,14 @@ body {
     padding: 16px 16px 22px 16px;
 
 }
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
->>>>>>> ae509aa (same)
-=======
-=======
+
 .filterCategories span{
  font-family: 'roboto-medium';
-=======
+}
 
 .filterCategories span {
     font-family: 'roboto-medium';
->>>>>>> 70fbdfb (added js)
+
 }
 
 .filterCategories section {
@@ -226,11 +210,10 @@ body {
     margin-left: 13px;
     font-size: 14px;
 }
->>>>>>> 6e3b8d1 (added js)
 
-<<<<<<< HEAD
->>>>>>> c1b3e72 (same)
-=======
+
+
+
 .textPointer {
     padding: 12px 16px;
 }
@@ -817,15 +800,14 @@ span,
 label {
     color: #212121;
 }
-<<<<<<< HEAD
-<<<<<<< HEAD
+
 
 /*......*/
->>>>>>> 70fbdfb (added js)
-=======
-/*......*/
->>>>>>> 825a311 (jsAndCss)
-=======
+
 
 /*......*/
->>>>>>> 3fc86ec (feat:sortingOption)
+
+
+
+/*......*/
+
