--- a/Amazon/style.css
+++ b/Amazon/style.css
@@ -729,7 +729,7 @@ main {
   position: relative;
   cursor: pointer;
 }
-.linkText{
+.linkText {
   cursor: pointer;
 }
 .backgroundText {
@@ -905,7 +905,7 @@ main {
   color: #e67a00;
   cursor: pointer;
 }
-.category-container span:hover{
+.category-container span:hover {
   color: #e67a00;
 }
 .discountOption {
@@ -915,7 +915,7 @@ main {
   display: flex;
   color: #0f1111;
   line-height: 1.4;
-  font-family: 'font-three';
+  font-family: "font-three";
   font-size: 14px;
   cursor: pointer;
 }
@@ -924,4 +924,74 @@ main {
 }
 .right-main {
   margin-left: 191px;
+}
+.desktop-view {
+  display: block;
+}
+
+
+
+@media screen and (min-width: 320px) {
+  .nav-top {
+    display: none;
+  }
+  .nav-bottom {
+    display: none;
+  }
+  .all-item {
+    display: none;
+  }
+  .left-main {
+    display: none;
+  }
+  .box-container {
+    display: flex;
+    align-items: center;
+  }
+  .imgSection {
+    width: 37%;
+    min-height: 200px;
+    min-width: 37%;
+  }
+  .imgSection img {
+    width: 106px;
+    height: 100%;
+    max-height: 195;
+    padding: 22px 5px;
+    background: transparent;
+  }
+  .bestOption {
+    position: absolute;
+    left: -1px;
+    white-space: nowrap;
+  }
+  .optionContainer::after {
+    right: -82px;
+  }
+  .box-container {
+    align-items: unset;
+    width: unset;
+  }
+  .model-name span {
+    font-size: 14px;
+  }
+  .right-main {
+    margin-left: 0px;
+  }
+  .priceShow {
+    font-size: 22px;
+  }
+  .ogPrice {
+    font-size: 12px;
+  }
+  .deliveryOne, .deliveryTwo {
+    font-size: 12px;
+  }
+  .deliverOptions {
+    font-size: 12px;
+  }
+  #product-container {
+    width: 99%;
+    margin-inline: 3px;
+  }
 }
