--- a/Amazon/style.css
+++ b/Amazon/style.css
@@ -935,6 +935,21 @@ main {
   .nav-top {
     display: none;
   }
+  .navFooterBackToTop {
+    display: none;
+  }
+  .accountContainer {
+    display: none;
+  }
+  .bottomNav {
+    display: none;
+  }
+  .navFooterVerticalColumn {
+    display: none;
+  }
+  .mobileNavContainer {
+    display: block;
+  }
   .nav-bottom {
     display: none;
   }
@@ -956,7 +971,7 @@ main {
   .imgSection img {
     width: 106px;
     height: 100%;
-    max-height: 195;
+    max-height: 182px;
     padding: 22px 5px;
     background: transparent;
   }
@@ -994,6 +1009,111 @@ main {
     width: 99%;
     margin-inline: 3px;
   }
+  .nav-logBar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #232f3e;
+    padding-top: 2px;
+    height: 48px;
+  }
+  .nav-left{
+    display: flex;
+    align-items: flex-start;
+    column-gap: 9px;
+    padding: 11px;
+    width: 41px;
+
+  }
+  .logoText {
+    font-size: 13.5px;
+    font-family: 'font-three';
+    color: #fff;
+    transform: translate(-10px, 5px);
+  }
+  .nav-right {
+    display: flex;
+    align-items: center;
+  }
+  .nav-cart {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px 18px 11px 12px;
+    margin-top: -10px;
+  }
+  .nav-signIn {
+    font-size: 13px;
+    color: #fff;
+    font-family: 'font-three';
+  }
+  .zero {
+    font-size: 16px;
+    font-family: 'font-five';
+    color: #f90;
+    transform: translate(3px, 17px);
+  }
+  .nav-searchBar {
+    background: #232f3e;
+  }
+  .nav-form {
+    display: flex;
+    align-items: center;
+    padding: 3px 10px;
+  }
+  .nav-form input {
+    padding: 0px 95px 0px 10px;
+    height: 44px;
+    border: none;
+    width: 100%;
+    border-radius: 6px;
+    font-size: 15px;
+    font-family: 'font-three';
+  }
+  .nav-form i {
+    background:#fcbb6a;
+    font-size: 24px;
+    padding: 10px 13px;
+    margin-left: -49px;
+    border: none;
+    border-radius: 6px;
+  }
+  .nav-location {
+    display: flex;
+    align-items: center;
+    background: #37475a;
+    padding: 12px 10px;
+  }
+  .nav-location span {
+    font-size: 13px;
+    color: #fff;
+    font-family: 'font-three';
+  }
+  .searchHeading {
+    font-size: 18px;
+  }
+  .right-filter {
+    padding: 15px 10px;
+    border-left: 1px solid #ddd;
+  }
+  .right-filter span {
+    font-size: 14px;
+    font-family: 'font-three';
+    color: #007185;
+    height: 46px;
+  }
+  .right-filter i {
+    color: #007185;
+  }
+  .nav-filter {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 1px 2px 0 rgb(17 17 17 / 15%);;
+  }
+  .left-filter {
+    padding: 7px 5px;
+  }
+  
 }
-/*  */
-/*  */
+
