--- a/Amazon/style.css
+++ b/Amazon/style.css
@@ -38,7 +38,6 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 .nav-top {
   display: flex;
   align-items: center;
@@ -1109,11 +1108,175 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 1px 2px 0 rgb(17 17 17 / 15%);;
+    box-shadow: 0 1px 2px 0 rgb(17 17 17 / 15%);
   }
   .left-filter {
     padding: 7px 5px;
   }
-  
+  .footer-start {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #37475a;
+    height: 50px;
+  }
+  .footer-start span {
+    font-size: 11px;
+    font-family: 'font-three';
+    color: #fff;
+  }
+  footer ul {
+    background: #232f3e;
+    padding: 25px 20px;
+  }
+  footer ul li {
+    width: 131px;
+    font-family: 'font-three';
+    color: #fff;
+    list-style-type: none;
+    padding: 8px 0px;
+  }
+  .li-right {
+    float: right;
+    clear: right;
+    padding-left: 4px;
+    padding-right: 0px;
+  }
+  .nav-list {
+    width: 50%;
+    display: block;
+    margin-top: 25px;
+    margin-bottom: 0;
+  }
+  .footer-auth {
+    background: #131a22;
+    color: #fff;
+    font-size: 15px;
+    font-family: 'font-three';
+    text-align: center;
+    padding: 25px 0px 0px;
+  }
+  .footer-horizontal {
+    display: flex;
+    align-items: center;
+    background: #131a22; 
+    color: #fff;
+    padding-bottom: 0;
+  }
+  .footer-horizontal li {
+    font-size: 11px;
+    color: #ddd;
+    padding-left: 8px;
+    white-space: nowrap;
+  }
+  .footer-language {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
+    font-family: 'font-three';
+    font-size: 14px;
+    background: #131a22;
+    color: #fff;
+    padding: 25px 12px;
+  }
+  .footer-copyright {
+    background: #131a22;
+    font-size: 11px;
+    color: #ddd;
+    white-space: nowrap;
+    font-family: 'font-three';
+    text-align: center;
+    padding: 0px 0px 35px;
+  }
+  .filter-popUp-container {
+    position: absolute;
+    background: #fff;
+    z-index: 10;
+    width: 100%;
+    top: 884px;
+    bottom: 0;
+    overflow: hidden;
+  }
+  .popUp-head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-bottom: 1px solid #e7e7e7;
+    height: 53px;
+  }
+  .count ,.close {
+    font-size: 15px;
+    font-family: 'font-three';
+  }
+  .close {
+    color: #017285
+  }
+  .leftSide-filter {
+    display: flex;
+    flex-direction: column;
+    width: 140px;
+  }
+  .heading {
+    font-size: 13px;
+    font-family: 'font-three';
+    font-weight: 500;
+    padding: 12px;
+    background: #f0f2f2;
+  }
+  .brand {
+    font-size: 13px;
+    font-family: 'font-three';
+    font-weight: 500;
+    padding: 12px;
+    background-color: #fff;
+  }
+  .filter-section {
+    display: flex;
+    height: 775px;
+  }
+  .leftSide-filter {
+    background: #f0f2f2;
+  }
+  .rightSide-filter {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+  }
+  .rightSide-filter span {
+    font-size: 13px;
+    font-family: 'font-three';
+    font-weight: 500;
+    margin: 0px 8px 8px 0px;
+    padding: 7px 9px;
+    background: #f0f2f2;
+    border-radius: 7px;
+    width: 100%;
+  }
+  .rightSide-filter h4{
+    font-size: 13px;
+    font-family: 'font-three';
+    margin-bottom: 5px;
+  }
+  .results {
+    border-top: 1px solid #e7e7e7;
+    text-align: right;
+    padding: 20px 10px;
+  }
+  .results span {
+    font-size: 13px;
+    font-family: 'font-three';
+    background: #007185;
+    color: #fff;
+    margin-right: 5px;
+    margin-left: 5px;
+    margin-bottom: 5px;
+    border: 0.1rem solid #f1f1f1;
+    border-radius: 7px;
+    padding: 9px;
+    height: 100%;
 }
+  }
 
