--- a/Amazon/style.css
+++ b/Amazon/style.css
@@ -1230,7 +1230,7 @@ main {
   }
   .filter-section {
     display: flex;
-    height: 775px;
+    height: 714px;
   }
   .leftSide-filter {
     background: #f0f2f2;
@@ -1255,12 +1255,12 @@ main {
     font-family: "font-three";
     margin-bottom: 5px;
   }
-  .results {
+  .results-section {
     display: flex;
     justify-content: space-between;
     border-top: 1px solid #e7e7e7;
     text-align: right;
-    padding: 20px 10px;
+    padding: 28px 10px;
   }
   .result {
     font-size: 13px;
@@ -1291,6 +1291,32 @@ main {
   }
   .four {
     display: flex;
+  }
+  .fourMore {
+    display: flex;
+  }
+  .starsOnly {
+    display: flex;
+    align-items: center;
+    background: #f0f2f2;
+    border-radius: 7px;
+    transform: translate(9px, 0px);
+    height: 30px;
+    margin-left: 0px;
+    padding-left: 4px;
+    padding-right: 4px;
+  }
+  .stars {
+    border-radius: 0px;
+  }
+  .customerReview {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    transform: translate(1px, 9px);
+  }
+  .customerReview {
+    display: none;
   }
 }
 
@@ -1678,7 +1704,7 @@ main {
     margin-left: 100px;
     white-space: nowrap;
     font-size: 12px;
-    font-family: "font-four";
+    font-family: "font-three";
   }
   .brand-container {
     display: flex;
